changed the route for user to include v1
