# openapi.yaml
@@ -52,7 +52,7 @@ paths:
                     type: string
                     example: 'Status: OK'
 
-  /users:
+  /v1/users:
     post:
       tags: [Users]
       summary: Create a user
@@ -139,7 +139,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /users/{id}:
+  /v1/users/{id}:
     get:
       tags: [Users]
       summary: Get a user by id
